--- a/template.ipynb
+++ b/template.ipynb
@@ -6,7 +6,7 @@
       "name": "intro.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNTwzazceeUh8G0txyTXoum",
+      "authorship_tag": "ABX9TyMdjjCS22On92nGjONy7CMS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +35,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oJjxB8l-hRqD",
-        "outputId": "d3ad82dd-037b-4144-cf4a-b63c234af58f"
+        "outputId": "582e5daa-a972-405b-d76d-3fd26c3cc169"
       },
       "source": [
         "print('hello world')\n"
@@ -54,13 +54,25 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Da9cc2j8iWp9"
+        "id": "Da9cc2j8iWp9",
+        "outputId": "6e5474d8-1e5e-4784-f66e-b8e79795190b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        ""
+        "print('hello colob')"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "hello colob\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
